--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -63,7 +63,7 @@ a
             h3
                 margin-bottom: 10px
 
-            span
+            span.link
                 text-decoration: underline
                 cursor: pointer
 
