--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,43 @@ a {
   color: #ececec;
 }
 
+.input_credentials {
+  margin-top: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.input_credentials h3 {
+  margin-bottom: 5px;
+}
+.input_credentials input {
+  border: none;
+  background-color: #0AAFB4;
+  border-radius: 5px;
+  color: #ececec;
+  padding: 10px;
+  margin-bottom: 20px;
+  width: 200px;
+  font-size: 16px;
+}
+.input_credentials input:focus {
+  outline: none;
+}
+.input_credentials button {
+  border: none;
+  background-color: #0AAFB4;
+  color: #ececec;
+  border-radius: 5px;
+  padding: 10px;
+  width: 200px;
+  cursor: pointer;
+  font-size: 16px;
+}
+.input_credentials button:hover {
+  background-color: #09878B;
+}
+
 .session_group {
   margin-top: 50px;
 }
@@ -49,14 +86,15 @@ a {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .session_group .session_items .session_item {
-  margin: 10px;
+  margin: 10px 0;
   padding: 10px;
   border-radius: 5px;
   background-color: #0AAFB4;
   color: #ececec;
-  width: 45vw;
+  width: 49%;
   min-width: 200px;
 }
 .session_group .session_items .session_item h3 {
@@ -72,6 +110,19 @@ a {
   width: 100%;
   height: 2px;
   background-color: #FF8C37;
+}
+
+@media (max-width: 480px) {
+  .session_group .session_items {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: 100%;
+  }
+  .session_group .session_items .session_item {
+    width: 90vw;
+    margin: 10px 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
