--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Arcade session viewer</h1>
+    <div class="input_credentials">
+        <h2>Your credentials</h2>
+        <h3>Slack user id:</h3>
+        <input type="text" id="input_user_id" autocomplete="off">
+        <h3>Arcade API key:</h3>
+        <input type="text" id="input_api_key" autocomplete="off">
+        <button onclick="updateCookies()">Update credentials</button>
+    </div>
     {% for goal, sessions in sessions_grouped.items()  %}
         <div class="session_group">
             <h2>Goal: {{ goal }}</h2>
@@ -23,9 +31,7 @@
             {% endfor %}
             </div>
         </div>
-        {% if goal != last_goal %}
-            <div class="divider"></div>
-        {% endif %}
+        <div class="divider"></div>
     {% endfor %}
     <script>
         var sessions_grouped = {{ sessions_grouped | tojson }};
