--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,6 +46,10 @@ a {
   flex-direction: column;
   align-items: center;
 }
+.input_credentials h2 {
+  text-align: center;
+  margin-bottom: 10px;
+}
 .input_credentials h3 {
   margin-bottom: 5px;
 }
