--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -48,6 +48,10 @@ a
     flex-direction: column
     align-items: center
 
+    h2
+        text-align: center
+        margin-bottom: 10px
+
     h3
         margin-bottom: 5px
 
